--- a/style.css
+++ b/style.css
@@ -1,18 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body {
     box-sizing: border-box;
     background-color: #EEF9BF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .header {
     display: flex;
+    text-align: center;
     justify-content: center;
     margin-top: 40px;
+    font-family: "Roboto", sans-serif;
+    width: 100vw;
+    height: 63px;
 }
 
 .game-title {
     color: #75B79E;
     font-size: 56px;
     font-weight: 700;
+    text-shadow: -3px 1px 2px grey;
+}
+
+.site {
+    max-width: 900px;
 }
 
 .container {
@@ -22,12 +43,13 @@ body {
     gap: 34px;
     justify-content: center;
     margin-left: 122px;
-    margin-right: 116px;  
+    margin-right: 116px;
+ 
 }
 
 .card {
     position: relative;
-    width: 117px;
+    min-width: 117px;
     height: 146px;
     background-color: #A7E9AF;
     border-radius: 5px;
@@ -60,4 +82,10 @@ body {
 img {
     width: 100px;
     height: 100px;
+}
+
+@media (max-width: 335px) {
+    .game-title {
+        font-size: 36px;
+    }
 }
