--- a/style.css
+++ b/style.css
@@ -33,7 +33,11 @@ body {
 }
 
 .site {
-    max-width: 900px;
+    max-width: 900;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
 }
 
 .container {
@@ -41,6 +45,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap: 34px;
+    align-items: center;
     justify-content: center;
     margin-left: 122px;
     margin-right: 116px;
@@ -62,8 +67,9 @@ body {
 }
 
 .card:hover {
-    width: 130px;
     height: 160px;
+    width: 120px;
+    cursor: pointer;
 }
 
 .front, .verse {
@@ -82,6 +88,35 @@ body {
 img {
     width: 100px;
     height: 100px;
+}
+
+.replay {
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.configButtom {
+    background-color: rgb(17, 218, 17);
+    width: 300px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 30px;
+    border: 2px solid lightgrey;
+    border-radius: 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+}
+
+.configButtom:hover {
+    cursor: pointer;
+}
+
+.hidden {
+    display: none;
 }
 
 @media (max-width: 335px) {
