--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 }
 
 .site {
-    max-width: 900;
+    max-width: 900px;
     display: flex;
     flex-direction: column;
     justify-items: center;
